--- a/frontend-web-app/package.json
+++ b/frontend-web-app/package.json
@@ -1,15 +1,15 @@
 {
   "name": "frontend-web-app",
   "version": "1.0.0",
-  "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "react-scripts start"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
   "dependencies": {
-    "react": "^18.2.0"
+    "@apollo/client": "^4.5.4",
+    "graphql": "^15.6.0",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
+    "react-scripts": "5.0.0"
   }
 }
