--- a/backend-api/package.json
+++ b/backend-api/package.json
@@ -15,7 +15,9 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
-    "graphql": "^16.8.1",
+    "graphql": "^16.8.1"
+  },
+  "devDependencies": {
     "prisma": "^5.11.0"
   }
 }
