--- a/backend-api/package.json
+++ b/backend-api/package.json
@@ -16,7 +16,8 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
-    "graphql": "^16.8.1"
+    "graphql": "^16.8.1",
+    "graphql-scalars": "^1.23.0"
   },
   "devDependencies": {
     "nodemon": "^3.1.0",
